# ADIUVARE

./: .gitignore  MANIFEST.in  README.md  cli.py  pyproject.toml
adiuvare/: guard.py  runtime_analysis.py
adiuvare/config/: __init__.py  editor.py  loader.py  schema.py
adiuvare/core/: gate.py  models.py  pipeline.py  policy_engine.py  scorer.py  verdict.py
adiuvare/integrations/: django.py  django_sink.py  fastapi.py  flask.py  sqlalchemy.py
adiuvare/signals/: __init__.py  ai.py  base.py  payload.py
adiuvare/state/: audit_log.py  event_stream.py  identity_store.py  persistence.py  whitelist.py
adiuvare/tui/: app.py  operator_actions.py  replit.tcss  wizard.py
adiuvare/tui/screens/: ai.py  audit.py  events.py
docs/: ai.md  limitations.md  quickstart.md
docs/api/: guard.md  signals.md
docs/extending/: custom-signals.md
docs/integrations/: django.md  fastapi.md  flask.md
docs/operator/: tui.md
examples/multi-framework-demo/django_demo/: README.md  ROUTE_VERIFICATION.md  adiuvare.yaml  manage.py  requirements.txt
examples/multi-framework-demo/django_demo/demo/: views.py
examples/multi-framework-demo/django_demo/django_demo/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
tests/: test_ai.py  test_audit.py  test_cli.py  test_config.py  test_custom_signals.py  test_django.py  test_fastapi.py  test_flask.py  test_gate.py  test_guard.py  test_models.py  test_operator_actions.py  test_payload.py  test_policy.py  test_sink.py  test_tui.py
