[project]
name = "adiuvare"
version = "0.1.0"
description = "In-process request security for Python APIs"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "PyYAML",
  "cachetools",
  "anyio",
  "limits",
  "httpx",
  "ua-parser",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "fastapi",
  "flask",
  "django",
  "sqlalchemy",
  "ruff",
]
tui = [
  "rich",
  "textual",
]
redis = [
  "redis>=5.0",
]

[project.scripts]
adv = "adiuvare.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"

[tool.ruff.lint]
per-file-ignores = { "adiuvare/**/__init__.py" = ["F401"] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["adiuvare*"]

[tool.setuptools.package-data]
adiuvare = [
  "state/schema.sql",
  "tui/*.tcss",
  "vendor/*.dll",
  "vendor/*.so",
  "vendor/*.dylib",
  "vendor/libinjection_src/*",
]
